--- a/src/application/MainFxml.fxml
+++ b/src/application/MainFxml.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -15,7 +16,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -49,7 +50,7 @@
                <children>
                   <TextField />
                   <TextField />
-                  <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="69.0" text="Button" />
+                  <CheckBox mnemonicParsing="false" text="CheckBox" />
                   <Region HBox.hgrow="ALWAYS" />
                   <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#hi" text="Log In" />
                   <Button mnemonicParsing="false" onAction="#hi" text="Delete" />
